# native/server/src/ws_hub.rs
@@ -811,6 +811,7 @@ mod tests {
             proxy_url: String::new(),
             queue_id: String::new(),
             checksum: String::new(),
+            ignore_tls_errors: false,
             file_missing: false,
             completed_at: String::new(),
             segments: 0,
@@ -836,6 +837,7 @@ mod tests {
             proxy_url: String::new(),
             queue_id: String::new(),
             checksum: String::new(),
+            ignore_tls_errors: false,
             file_missing: false,
             completed_at: String::new(),
             segments: 0,
